--- a/index.html
+++ b/index.html
@@ -76,7 +76,15 @@
 		</form>
 		<div id="option-toggle" class="icon-cog" v-on:click="toggleOptions()"></div>
 	</section>
-	<div id="radix-logo"></div>
+	<div id="radix-logo">
+		<div class="text base-2">Binary</div>
+		<div class="text base-8">Octal</div>
+		<div class="text base-10">Decimal</div>
+		<div class="text base-12">Dozenal / Duodecimal</div>
+		<div class="text base-16">Hexadeximal</div>
+		<div class="text base-20">Vigesimal</div>
+		<div class="text base-60">Sexagesimal</div>
+	</div>
 </main>
 
 
