added preliminar work roman numerals

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 		<div class="text base-2"><span class="first">Binary</span><span class="second">Binary</span></div>
 		<div class="text base-8">Octal</div>
 		<div class="text base-10">Decimal</div>
+		<div class="text base-10-roman">Roman Decimal</div>
 		<div class="text base-12">Dozenal / Duodecimal</div>
 		<div class="text base-16">Hexadeximal</div>
 		<div class="text base-20">Vigesimal</div>
