added preliminar work roman numerals

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 		<div class="text base-12">Dozenal / Duodecimal</div>
 		<div class="text base-16">Hexadeximal</div>
 		<div class="text base-20">Vigesimal</div>
+		<div class="text base-36">Base 36</div>
 		<div class="text base-60">Sexagesimal</div>
 	</div>
 </main>
